@@ -88,24 +88,27 @@
 
 <!-- Attributes:                                                            -->
 <!--
-	name:        The name of this test (as it will appear in the reports)
-	junit:       (true|false) Whether to run in JUnit mode. Default value: false.
-	verbose:     (0-10) How verbose the output on the console will be.  
-               This setting has no impact on the HTML reports. 
-               Default value: suite level verbose.
-	parallel:    (methods) Whether TestNG should use different threads
-	             to run your tests (might speed up the process)
-	annotations: (javadoc|JDK5)  If "javadoc", TestNG will look for 
-							 JavaDoc annotations in your sources, otherwise it will
-               use JDK5 annotations. Default value: JDK5
-	timeout:     the time to wait in milliseconds before aborting 
-							 the method (if parallel="methods") or the test (if parallel="tests") 
+	name:         The name of this test (as it will appear in the reports)
+	junit:        (true|false) Whether to run in JUnit mode. Default value: false.
+	verbose:      (0-10) How verbose the output on the console will be.
+                This setting has no impact on the HTML reports.
+                Default value: suite level verbose.
+	parallel:     (methods) Whether TestNG should use different threads
+	              to run your tests (might speed up the process)
+	thread-count: An integer giving teh size of the thread pool to be used if
+	              parallel mode is used. Overrides the suite level value.
+	annotations:  (javadoc|JDK5)  If "javadoc", TestNG will look for
+							  JavaDoc annotations in your sources, otherwise it will
+                use JDK5 annotations. Default value: JDK5
+	timeout:      the time to wait in milliseconds before aborting
+							  the method (if parallel="methods") or the test (if parallel="tests") 
 -->
 <!ATTLIST test
     name CDATA #REQUIRED 
     junit CDATA #IMPLIED
     verbose CDATA #IMPLIED
-    parallel CDATA #IMPLIED 
+    parallel CDATA #IMPLIED
+    thread-count CDATA #IMPLIED
     annotations CDATA #IMPLIED
     time-out CDATA #IMPLIED
 >
