@@ -27,6 +27,7 @@
 <span class="xml-comment">&lt;!-- Full documentation:  http://testng.org                 --&gt;</span>
 <span class="xml-comment">&lt;!--                                                        --&gt;</span>
 <span class="xml-comment">&lt;!-- Cedric Beust                                           --&gt;</span>
+<span class="xml-comment">&lt;!-- Alex Popescu                                           --&gt;</span>
 <span class="xml-comment">&lt;!-- ====================================================== --&gt;</span>
 
 
@@ -37,8 +38,8 @@
 <span class="xml-comment">&lt;!-- name:  The name of this suite (as it will appear in the reports)       --&gt;</span>
 <span class="xml-comment">&lt;!-- verbose:  (0-10) How verbose the output on the console                 --&gt;</span>
 <span class="xml-comment">&lt;!--           will be.  This setting has no impact on the HTML reports     --&gt;</span>
-<span class="xml-comment">&lt;!-- parallel:  (true|false) Whether TestNG should use different threads to --&gt;</span>
-<span class="xml-comment">&lt;!--             run your tests (might speed up the process)                --&gt;</span>
+<span class="xml-comment">&lt;!-- parallel:  (methods|tests) Whether TestNG should use different threads --&gt;</span>
+<span class="xml-comment">&lt;!--            to run your tests (might speed up the process)              --&gt;</span>
 <span class="xml-comment">&lt;!-- thread-count:  An integer giving the size of the thread pool to use    --&gt;</span>
 <span class="xml-comment">&lt;!--                if you set parallel=true (default is 5)                 --&gt;</span>
 <span class="xml-comment">&lt;!-- annotations:   (javadoc|JDK5)  If "javadoc", TestNG will look for      --&gt;</span>
@@ -87,6 +88,8 @@
 <span class="xml-comment">&lt;!--           will be.  This setting has no impact on the HTML reports     --&gt;</span>
 <span class="xml-comment">&lt;!-- parallel:  (true|false) Whether TestNG should use different threads to --&gt;</span>
 <span class="xml-comment">&lt;!--             run your tests (might speed up the process)                --&gt;</span>
+<span class="xml-comment">&lt;!-- thread-count:  An integer giving the size of the thread pool to use    --&gt;</span>
+<span class="xml-comment">&lt;!--                if parallel mode is on (overrides suite level value)    --&gt;</span>
 <span class="xml-comment">&lt;!-- annotations:   (javadoc|JDK5)  If "javadoc", TestNG will look for      --&gt;</span>
 <span class="xml-comment">&lt;!--                JavaDoc annotations in your sources, otherwise it will  --&gt;</span>
 <span class="xml-comment">&lt;!--                use JDK5 annotations                                    --&gt;</span>
